# notes_cli

./: Cargo.toml  notes.json
src/: main.rs
